# KEA_1.Semester_Integration

./: .gitignore  KEA_1_Semester.sln  README.md
00._Opgaver/02._Data_Format_Server/: app.js  package-lock.json  package.json
00._Opgaver/04b._Database_granular_data_access/: README.md  RESULT.md  docker-compose.yml
00._Opgaver/06a._WebSocket_Example/: main.py  pyproject.toml
00._Opgaver/08b._Code_documentation/: README.md
00._Opgaver/10a._Document_a_database/: README.md
00._Opgaver/10b._Migrate_from_database_to_another/: docker-compose.yml  init_source_db.sql  knexfile.js  migrate.js  migrate_data.py  package-lock.json  package.json  pyproject.toml
00._Opgaver/10b._Migrate_from_database_to_another/init/: init.sql
00._Opgaver/12a._Expose_and_integrate_with_webhook/: README.md  README.me
01a._File_reader_opgave/C#/: FileReaderProject.sln
01a._File_reader_opgave/Node.js/: fileReaderMethods.js
02_Text_based_data_formats/: me.csv  me.json  me.txt  me.xml  me.yaml
03_Modules/python_main/: potential_library.py
04_File_reader_opgave/C#/: C#.csproj  FileReader.cs  Me.cs  Program.cs
04_File_reader_opgave/Node.js/: FileReader.js  fileReaderMethods.js  index.js  me.js  package-lock.json  package.json
04_File_reader_opgave/Text_files/: me.csv  me.txt
05._Encode_Decode/01._node/: index.js
06._Pyhton_Virtual_Environment/03._poetry/: pyproject.toml
07._Simple_Servers/01._node/: app.js  package-lock.json
07._Simple_Servers/02._python/: pyproject.toml
07._Simple_Servers/03._test/: app.js
08._Server_To_Server/01._node/: app.js  package-lock.json  package.json
08._Server_To_Server/02._python/: main.py  pyproject.toml
09._Environment_Variable/01._node/: index.js  package.json
09._Environment_Variable/02._python/: main.py  pyproject.toml
10._Date/01._node/: index.js
10._Date/02._python/: main.py
11._Short_Polling/01._node/: app.js
12._Long_Polling/01._node/: app.js
13._SSE/01._node/: app.js
13._SSE/02._python/: main.py  pyproject.toml
14._Websocket/01._node/: server.js
14._Websocket/02._python_plain/: client.py  pyproject.toml  server.py
14._Websocket/03._python_fastapi/: pyproject.toml
15._OpenAPI/01._node/: app.js  package.json
16._WebRTC/: package-lock.json
18._CORS/: index.html
19._Multipart_Forms/: index.html
20._Base64_Images/: index.html
21._Audio/: index.html
22._MPEG-DASH/: app.js  package.json
23._Embedded_Youtube/: embeddedyoutube.html
24._Git_Hooks/: main.js
27._Web_Scraping_Web_Crawler/04._python_scrapy_basic/: pyproject.toml
27._Web_Scraping_Web_Crawler/04._python_scrapy_basic/wikicrawler/wikicrawler/spiders/: WikiPageSpider.py
(+117 files in other folders)
