[project]
name = "10b-migrate-from-database-to-another"
version = "0.1.0"
description = ""
authors = [
    {name = "Brezzor",email = "oliver.bresson@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pyodbc (>=5.2.0,<6.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]

[tool.poetry]
packages = [{include = "10b"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
